# AutoDesk

./: .gitignore  README.md
app/: index.html  package.json  vite.config.js
app/src/: main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
backend/: README.md  pyproject.toml  requirements.txt
backend/src/workspace_assistant/: __init__.py  config.py  main.py  service.py
backend/src/workspace_assistant/api/: routes.py
backend/src/workspace_assistant/audio/: __init__.py  manager.py
backend/src/workspace_assistant/automation/: __init__.py  chatgpt.py  clipboard.py  keyboard.py  launcher.py  profiles.py
backend/src/workspace_assistant/executor/: __init__.py  actions.py  executor.py
backend/src/workspace_assistant/parser/: __init__.py  layout_parse.py  llm.py  prompt.py  rules.py
backend/src/workspace_assistant/presets/: manager.py
backend/src/workspace_assistant/voice/: __init__.py  listener.py  transcribe.py
backend/src/workspace_assistant/windows/: __init__.py  base.py  layouts.py  stub_manager.py  win32_manager.py  zones.py
backend/tests/: test_audio_layout.py  test_executor.py  test_llm_parser.py  test_parser.py  test_workflow.py
config/: apps.json  audio.json  layouts.json  presets.json  projects.json  settings.json  settings.local-llm.example.json
docs/: AUDIO_SETUP.md  CHROME_PROFILE_SETUP.md  GETTING_STARTED.md  LOCAL_LLM.md  SETUP_AND_USER_GUIDE.md
scripts/: install-backend.ps1  start-backend.ps1  start-backend.sh  switch-audio-device.ps1
